package MainPackage;

import java.awt.*;


public class Main {


    public static void main(String[] args) {

        Start start = new Start();
        start.setBackground(new Color(220,227,238));

    }

}
