package Vehicles;

public class Behaviour {

    public static boolean isInSight(double[] this_car_position, double angle, double[] some_car_position,int CAR_SIZE, int FOV){

        return true;
    }
}